fix(tests): fix all backend test failures — 202 tests green
- Guide entity: CascadeType.ALL → {MERGE, REMOVE} to prevent re-persist of deleted activities
- ActivityController: fix wrong method signatures (updateActivity/deleteActivity arg count)
- GuideController: add null checks on addUserToGuide/removeUserFromGuide → 404 when not found
- GuideService: return null instead of throwing ResourceNotFoundException in user-guide ops
- CommentResponseDTO: fix DTO construction
- ActivityRepository: add missing query methods
- All test suites updated to match API contracts (202 tests, 0 failures)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>